correction duplication z-index

--- a/css/style.css
+++ b/css/style.css
@@ -1,101 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-body, html {
-  font-family: 'Roboto', sans-serif;
-  height: 100vh;
-  margin: 0px auto;
-  position: relative;
-  background-color: white;
-}
-
-.full-container {
-  max-width: 1400px;
-  min-width: 315px;
-  padding: 0px 20px;
-  margin: 0px auto;
-}
-
-@media screen and (max-width: 1024px) {
-  .full-container {
-    padding: 0px;
-  }
-}
-
-ul {
-  margin: 0px;
-  padding: 0px;
-  list-style-type: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-h1, footer h3 {
-  font-family: 'Shrikhand', cursive;
-}
-
-h3 {
-  font-size: 1rem;
-}
-
-span, strong {
-  display: inline-block;
-}
-
-img {
-  display: block;
-}
-
-.heart-icons__container {
-  position: absolute;
-  top: 50%;
-  height: 24px;
-  width: 30px;
-  transform: translateY(-50%);
-}
-
-.heart-icons__container:hover .icon-full {
-  transform: scale(1);
-}
-
-.heart-icons__container:hover .icon-empty {
-  background: linear-gradient(#FF79DA, #9356DC);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.heart-icons__container .heart-icon {
-  color: transparent;
-  position: absolute;
-  inset: 0px;
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-.heart-icons__container .heart-icon:hover {
-  cursor: pointer;
-}
-
-.heart-icons__container .icon-empty {
-  transition: all 200ms linear;
-  z-index: 10;
-  background: black;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.heart-icons__container .icon-full {
-  transition: 300ms ease-in-out;
-  font-size: 1.5rem;
-  background: linear-gradient(#FF79DA, #9356DC);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transform-origin: bottom;
-  transform: scale(0);
-  z-index: 1;
-}
-
 @keyframes loader {
   70% {
     opacity: 1;
@@ -195,6 +99,8 @@ img {
 
 .loader .circles {
   display: flex;
+  flex-flow: nowrap row;
+  justify-content: stretch;
   align-items: center;
   position: absolute;
   border-radius: 50%;
@@ -251,6 +157,89 @@ img {
   background: linear-gradient(#9356DC, #FF79DA);
 }
 
+body, html {
+  font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  margin: 0px auto;
+  position: relative;
+  background-color: white;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1, footer h3 {
+  font-family: 'Shrikhand', cursive;
+}
+
+h3 {
+  font-size: 1rem;
+}
+
+span, strong {
+  display: inline-block;
+}
+
+img {
+  display: block;
+}
+
+.heart-icons__container {
+  position: absolute;
+  top: 50%;
+  height: 24px;
+  width: 30px;
+  transform: translateY(-50%);
+}
+
+.heart-icons__container:hover .icon-full {
+  transform: scale(1);
+}
+
+.heart-icons__container:hover .icon-empty {
+  background: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.heart-icons__container .heart-icon {
+  color: transparent;
+  position: absolute;
+  inset: 0px;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.heart-icons__container .heart-icon:hover {
+  cursor: pointer;
+}
+
+.heart-icons__container .icon-empty {
+  transition: all 200ms linear;
+  z-index: 10;
+  background: black;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.heart-icons__container .icon-full {
+  transition: 300ms ease-in-out;
+  font-size: 1.5rem;
+  background: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transform-origin: bottom;
+  transform: scale(0);
+  z-index: 1;
+}
+
 header .header__logo {
   padding-block: 50px;
 }
@@ -272,9 +261,23 @@ header img {
   }
 }
 
+.full-container {
+  max-width: 1400px;
+  min-width: 315px;
+  padding: 0px 20px;
+  margin: 0px auto;
+}
+
+@media screen and (max-width: 1024px) {
+  .full-container {
+    padding: 0px;
+  }
+}
+
 .main_container {
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
+  justify-content: stretch;
   align-items: flex-end;
 }
 
@@ -287,6 +290,7 @@ header img {
 
 .explore .location {
   display: flex;
+  flex-flow: nowrap row;
   justify-content: center;
   align-items: center;
   background-color: #EAEAEA;
@@ -406,6 +410,7 @@ header img {
   border-radius: 20px;
   box-shadow: 0px 3px 6px #a5a5a5;
   display: flex;
+  flex-flow: nowrap row;
   justify-content: center;
   align-items: center;
   transition: all 300ms ease-out;
@@ -430,6 +435,7 @@ header img {
   font-weight: 400;
   font-size: 0.9rem;
   display: flex;
+  flex-flow: nowrap row;
   justify-content: center;
   align-items: center;
   position: absolute;
@@ -460,7 +466,9 @@ header img {
 .restroom__container {
   flex: 1 1 100%;
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
+  justify-content: stretch;
+  align-items: stretch;
   background: #F6F6F6;
   gap: 50px;
   padding: 50px;
@@ -580,7 +588,9 @@ footer .footer__title {
 
 footer ul {
   display: flex;
+  flex-flow: nowrap row;
   justify-content: space-around;
+  align-items: stretch;
 }
 
 @media screen and (max-width: 650px) {
@@ -601,42 +611,6 @@ footer li .icon {
 
 footer li a {
   color: white;
-}
-
-.menu__body {
-  max-width: 1000px;
-}
-
-.header-menu {
-  position: relative;
-}
-
-.header-menu__icon--link {
-  position: absolute;
-  left: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.header-menu__icon {
-  font-size: 2rem;
-  color: black;
-}
-
-@media screen and (max-width: 650px) {
-  .header-menu__icon {
-    font-size: 1.3rem;
-  }
-}
-
-.restaurant__picture--container {
-  margin: auto;
-}
-
-.restaurant__picture--container img {
-  width: 100%;
-  max-height: 400px;
-  object-fit: cover;
 }
 
 @keyframes opacity {
@@ -735,12 +709,50 @@ footer li a {
   animation-delay: 1600ms;
 }
 
+.menu__body {
+  max-width: 1000px;
+}
+
+.header-menu {
+  position: relative;
+}
+
+.header-menu__icon--link {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.header-menu__icon {
+  font-size: 2rem;
+  color: black;
+}
+
+@media screen and (max-width: 650px) {
+  .header-menu__icon {
+    font-size: 1.3rem;
+  }
+}
+
+.restaurant__picture--container {
+  margin: auto;
+}
+
+.restaurant__picture--container img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+}
+
 .menu {
   margin: 0px auto -50px;
   box-sizing: border-box;
   padding: 15px;
   display: flex;
-  flex-direction: column;
+  flex-flow: column;
+  justify-content: stretch;
+  align-items: stretch;
   background: #F6F6F6;
   position: relative;
   border-radius: 50px 50px 0px 0px;
@@ -843,6 +855,7 @@ footer li a {
 
 .menu__item--icon-container {
   display: flex;
+  flex-flow: nowrap row;
   justify-content: center;
   align-items: center;
   grid-area: icon;
@@ -892,7 +905,6 @@ footer li a {
   border-radius: 30px;
   inset: 0px;
   background: linear-gradient(90deg, #b579ff, #FF79DA);
-  z-index: -1;
   opacity: 0;
   transition: all 300ms ease-out;
   z-index: -1;
