--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,26 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
-
 body, html{
     font-family: 'Roboto', sans-serif;
     height: 100vh;
     margin: 0px auto;
     position: relative;
-    background-color: white;
-    
-    
-}
-
-.full-container {
-    max-width: 1400px;
-    min-width: 315px;
-    padding: 0px 20px;
-    margin: 0px auto;
-    @media screen and (max-width: $tablet){
-        padding: 0px;
-    }
+    background-color: white;  
 }
 
 ul{
